# clack

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.toml.example  output.md
.github/workflows/: ci.yml
assets/: decision_trees.md  demo.cast  demo.tape
src/: app.rs  config.rs  main.rs  markdown.rs  sound.rs  theme.rs  ui.rs
